[workspace]
members = [
    "programs/*"
]

[profile.release]
overflow-checks = true
lto = "fat"
codegen-units = 1
[profile.release.build-override]
opt-level = 3
incremental = false
codegen-units = 1

# [package]
# name = "data_store"
# version = "0.2.0"
# edition = "2021"
# authors = ["Mateo Lafalce <mateo.lafalce04@gmail.com>"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# [dependencies]
# decenwser = { path = "./programs/decenwser", features = ["no-entrypoint"] }
# anchor-client = { version = "0.29.0", features = ["debug"] }
# anyhow = "1.0.68"
# shellexpand = "3.0.0"
